--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -61,7 +61,7 @@
     - title: Basic Data Types
       url: /a3
       subsections:
-      expand_sections: false
+      #expand_sections: false
       - title: Integers
         url: /a5
       - title: Floats
@@ -73,7 +73,7 @@
     - title: Data Structures
       url: /a4
       subsections:
-      expand_sections: false
+      #expand_sections: false
       - title: Lists
         url: /a9
       - title: Tuples
