--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -54,7 +54,7 @@
   url: /features/features
   expand_sections: false
   sections:
-    - title: Arithmetic
+    - title: Arithmetic -foo
       url: /pages/arithmetic
     - title: Variables
       url: /pages/arithmetic
