--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -104,6 +104,7 @@
       - title: Return Values
       - title: Scope
       - title: Lambda Functions
+      - title: Recursion
 
 - title: Packages
   sections:
