--- a/_config0.yml
+++ b/_config0.yml
@@ -16,14 +16,14 @@
 
 #######################################################################################
 # Jekyll site settings
-title: YOUR BOOK NAME
-author: YOUR AUTHOR NAME
-email: YOUR EMAIL
+title: Python for Data Science
+author: Robbie Beane
+email: rbeane@maryville.edu
 description: >-
   This is an example book built with Jupyter Books.
 
-baseurl: /  # the subpath of your site, e.g. /blog. If there is no subpath for your site, use an empty string ""
-url: YOUR URL                  # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: /               # the subpath of your site, e.g. /blog. If there is no subpath for your site, use an empty string ""
+url: YOUR URL              # the base hostname & protocol for your site, e.g. http://example.com
 
 
 #######################################################################################
@@ -38,17 +38,13 @@ show_sidebar: true                # Show the sidebar. Only set to false if your 
 collapse_inactive_chapters: true  # Whether to collapse the inactive chapters in the sidebar
 collapse_inactive_sections: true  # Whether to collapse the sub-sections within a non-active section in the sidebar
 textbook_logo: images/logo/logo.png               # A logo to be displayed at the top of your textbook sidebar. Should be square
-textbook_logo_link: https://jupyterbook.org/                    # A link for the logo.
-sidebar_footer_text: Powered by <a href="https://jupyterbook.org">Jupyter Book</a>
+textbook_logo_link: https://jupyter.org/jupyter-book/                    # A link for the logo.
+sidebar_footer_text: Powered by <a href="https://github.com/jupyter/jupyter-book">Jupyter
+  Book</a>
 number_toc_chapters: true         # Whether to add numbers to chapterse in your Table of Contents. If true, you can control this at the Chapter level in _data/toc.yml
 
 # Search settings
 search_max_words_in_content: 100   # In the search function, use at most this many words (too many words will make search slow)
-
-# Controlling page information
-page_titles: infer                      # Either `None`, `infer`, or `toc`
-page_authors: None                     # Either `None` or `infer`
-filename_title_split_character: _     # If inferring titles based on filename, splt on this character.
 
 #######################################################################################
 # Interact link settings
@@ -81,7 +77,6 @@ use_show_widgets_button: true                # If 'true', display a button to al
 # Download settings
 use_download_button: true                # If 'true', display a button to download a zip file for the notebook
 download_button_text: Download                # The text that download buttons will contain
-download_page_header: Made with Jupyter Book                # A header that will be displayed at the top of and PDF-printed page
 
 #######################################################################################
 # Jupyter book extensions and additional features
@@ -155,4 +150,4 @@ plugins:
 - jekyll-scholar
 
 # Jupyter Book version - DO NOT CHANGE THIS. It is generated when a new book is created
-jupyter_book_version: 0.6.4dev0
+jupyter_book_version: 0.6.1dev0
