--- a/_config.yml
+++ b/_config.yml
@@ -16,11 +16,11 @@
 
 #######################################################################################
 # Jekyll site settings
-title: YOUR BOOK NAME
-author: YOUR AUTHOR NAME
-email: YOUR EMAIL
+title: Python for Data Science
+author: Robbie Beane
+email: rbeane@maryville.edu
 description: >-
-  This is an example book built with Jupyter Books.
+  This is a book about Python. 
 
 baseurl: /  # the subpath of your site, e.g. /blog. If there is no subpath for your site, use an empty string ""
 url: YOUR URL                  # the base hostname & protocol for your site, e.g. http://example.com
