--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -36,7 +36,7 @@
     #- from: ch/04/cleaning_intro
     #  to: ch/05/cleaning_intro
 
-- title: About This Book
+- title: Abouts This Book
   url: /about
   not_numbered: true
 
